# MedicationManager

./: CMakeLists.txt  LICENSE  MedicationManager  README.md  Team13CodeParticipationSummary.md  data.json
.github/ISSUE_TEMPLATE/: mellydawgky-bug-template.md
.github/workflows/: build.yml
electron/: main.js  package.json  preload.js
electron/app/: index.html  login.html  renderer.js  styles.css
include/: Account.h  Medication.h  MedicationReminder.h  Schedule.h  Storage.h  User.h
src/: Account.cpp  Medication.cpp  MedicationReminder.cpp  Schedule.cpp  Storage.cpp  User.cpp  main.cpp  validate_data.cpp
web/: index.html  styles.css
